--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,13 +1,7 @@
 all: writer
 
-compile=gcc
-ifdef CROSS_COMPILE
-	compile=aarch64-none-linux-gnu-gcc
-endif
-
 writer: writer.c
-	$(compile) writer.c -o writer
+	$(CROSS_COMPILE)gcc writer.c -o writer
 
 clean:
-	rm -f writer
-	rm -f *.o
+	rm -f writer *.o
