--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,7 +1,9 @@
 all: writer
 
+CC = $(CROSS_COMPILE)gcc
+
 writer: writer.c
-	$(CROSS_COMPILE)gcc writer.c -o writer
+	$(CC) writer.c -o writer
 
 clean:
 	rm -f writer *.o
